ionic (0.5.5) unstable; urgency=low

  * Fix toolbar hiding when it should be visible
  * Make reading progress more visible in "night" mode
  * Don't underline dead links

 -- Akos Polster <akos@pipacs.com>  Sat, 29 Oct 2011 21:53:00 +0200

ionic (0.5.4) unstable; urgency=low

  * Add setting to hide the toolbar
  * Show reading progress
  * Update book links

 -- Akos Polster <akos@pipacs.com>  Sun, 23 Oct 2011 18:58:00 +0200

ionic (0.5.3) unstable; urgency=low

  * Have a proper change log
  * Update package manager icon
  * Keep logical and package versions in sync
  * Make navigation smoother, run database operations in the background
  * Fix reading books where part file names have unsupported extensions
  * Show reading progress on book info page
  * Disable links inside book pages
  * Add books from menu
  * Open books downloaded with the browser

 -- Akos Polster <akos@pipacs.com>  Mon, 17 Oct 2011 22:55:00 +0200

ionic (0.5.2) unstable; urgency=low

  * Fixed chapter and bookmark navigation issues
  * Fixed book import from local folders
  * Control display brightness and blanking from Settings

 -- Akos Polster <akos@pipacs.com>  Mon, 17 Oct 2011 22:54:00 +0200

ionic (0.0.1) unstable; urgency=low

  * Initial Release.

 -- Akos Polster <akos@pipacs.com>  Sun, 18 Sep 2011 01:16:14 +0200